<resources>
    <string name="app_name">News</string>

    <string name="menu_home" translatable="false">Home</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_featured" translatable="false">Axion</string>
    <string name="menu_browse" translatable="false">Browse</string>


    <!-- Feature pages -->
    <string name="string_special_report">Special Report</string>
    <string name="text_more_what_you_like">More of what you like</string>
    <string name="text_home_description">Enjoy a little of everything you love</string>
    <string name="text_world_today">World today</string>
    <string name="text_world_today_description">Minimum news influencing your daily life</string>


    <!-- Detail screen -->
    <string name="detail_author">Author</string>

    <string name="string_trading">Trending</string>
    <string name="string_trading_description">Leverage Wisdom of Crowds</string>
    <string name="string_magazines">Magazines</string>
    <string name="string_magazines_description">Enjoy a little of everything you love</string>
    <string name="string_top_tags">Your Top Genres</string>

    <string name="string_tag1" translatable="false">ML</string>
    <string name="string_tag2" translatable="false">AR / VR </string>
    <string name="string_tag3" translatable="false">IoT</string>
    <string name="string_tag4" translatable="false">India</string>
    <string name="string_tag5" translatable="false">Robot</string>
    <string name="string_tag6" translatable="false">China</string>

    <!-- Author Screen -->
    <string name="author_bio">Bio</string>


</resources>
