<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">
		<LinearLayout
			android:orientation="vertical"
			android:layout_width="match_parent"
			android:layout_height="wrap_content">

			<TextView android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:paddingStart="10dp"
		          android:paddingTop="10dp"
		          android:textColor="@color/text_color_gray"
		          android:textSize="@dimen/textAppearanceHeadline5"
		          android:maxLines="1"
		          android:ellipsize="end"
		          android:text="@string/string_trading"/>

			<TextView android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:paddingStart="10dp"
		          android:textColor="@color/text_color_gray"
		          android:textSize="@dimen/textAppearanceHeadline6"
		          android:maxLines="1"
		          android:ellipsize="end"
		          android:text="@string/string_trading_description"/>

			<com.github.ybq.android.spinkit.SpinKitView
				android:id="@+id/trading_loading"
				style="@style/SpinKitView.Large.Wave"
				android:layout_width="wrap_content"
				android:layout_height="154dp"
				android:layout_gravity="center"
				app:SpinKit_Color="@color/colorAccent" />

			<androidx.recyclerview.widget.RecyclerView
				android:layout_width="match_parent"
				android:layout_height="154dp"
				android:elevation="3dp"
				android:visibility="gone"
				android:id="@+id/trading"/>

			<TextView android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:paddingStart="10dp"
		          android:paddingTop="10dp"
		          android:textColor="@color/text_color_gray"
		          android:textSize="@dimen/textAppearanceHeadline5"
		          android:maxLines="1"
		          android:ellipsize="end"
		          android:text="@string/string_magazines"/>

			<TextView android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:paddingStart="10dp"
		          android:textColor="@color/text_color_gray"
		          android:textSize="@dimen/textAppearanceHeadline6"
		          android:maxLines="1"
		          android:ellipsize="end"
		          android:text="@string/string_magazines_description"/>

			<com.github.ybq.android.spinkit.SpinKitView
				android:id="@+id/magazine_loading"
				style="@style/SpinKitView.Large.Wave"
				android:layout_width="wrap_content"
				android:layout_height="154dp"
				android:layout_gravity="center"
				app:SpinKit_Color="@color/colorAccent" />

			<androidx.recyclerview.widget.RecyclerView
				android:layout_width="match_parent"
				android:layout_height="154dp"
				android:elevation="3dp"
				android:visibility="gone"
				android:id="@+id/magazine"/>

			<TextView android:layout_width="match_parent"
		          android:layout_height="wrap_content"
		          android:paddingStart="10dp"
		          android:paddingTop="10dp"
		          android:textColor="@color/text_color_gray"
		          android:textSize="@dimen/textAppearanceHeadline5"
		          android:maxLines="1"
		          android:ellipsize="end"
		          android:text="@string/string_top_tags"/>

			<androidx.recyclerview.widget.RecyclerView
				android:id="@+id/info_tags"
				android:layout_width="match_parent"
				android:minHeight="200dp"
				android:layout_height="wrap_content" />
		</LinearLayout>
	</ScrollView>
</layout>